[Feature #162560978] modified the sign up page layout

--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
 </head>
 <body>
 	<div class="container">
+		<header id = "main-header">
+			<div class = "container">
+		<h1>Stackoverflow</h1>
+		</div>
 
-		<h1>Home page</h1>
+
+		</header>
+
 		<h2><button>login</button></h2>
 		<p>Ask questions get answered by pros</p>
 		<form>
 
-			<input type="text" name="" placeholder="Question here">
-			<button>ask</button>
-		</form>
+			<input class = "type="text" name="" placeholder="Question here">
+			<br>
+			<br>
+			<input class= "button" type="submit">
+		</form> 
 
 		<div class="box-1">
 			<h3>Don't have an account yet</h3>
@@ -34,7 +42,7 @@
 					<input type="Email" name="Last" placeholder="your mail">
 				</div>
 				<br>
-				<input type="submit" name="submit">
+				<input class="button" type="submit" name="submit">
 
 			</form>
 		</div>
